--- a/css/estilos.css
+++ b/css/estilos.css
@@ -98,6 +98,20 @@
 .text-muted3{
     text-decoration: line-through;
 }
+.titulo__ofertas__destino{
+text-transform: uppercase;
+text-align: center;
+margin-top: 2.5rem;
+}
+.texto__ofertas__destino{
+    margin-top: 2rem;
+}
+
+/* ELGIR ASIENTO CSS*/
+
+
+
+
 
 /* Footer */
 .footer-section{
